syntax = "proto3";

package payment.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/sonuudigital/microservices/gen/payment/v1;paymentv1";

service PaymentService {
    rpc GetPayment(GetPaymentRequest) returns (Payment);
    rpc ProcessPayment(ProcessPaymentRequest) returns (Payment);
}

message GetPaymentRequest {
    string id = 1;
}

message ProcessPaymentRequest {
    string order_id = 1;
    string user_id = 2;
    double amount = 3;
}

message Payment {
    string id = 1;
    string order_id = 2;
    string user_id = 3;
    double amount = 4;
    string status = 5;
    google.protobuf.Timestamp created_at = 6;
}
